k8s/api/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ovh-checker-<ENV>-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: <HOST>
      http:
        paths:
          - backend:
              serviceName: ovh-checker-<ENV>-api
              servicePort: 8080
  tls:
    - hosts:
        - <HOST>
      secretName: ovh-checker-<ENV>-api-tls
